@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10844.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10853.tgz',
      'xapian-core.tgz',
-     '1ad039c5e62273652ce2caf1dd9e9d1efa778986',
+     '2d2a2e7bb9b8b8a656440e70977e8ab9c5dc2f50',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10844.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10853.tgz',
      'xapian-bindings.tgz',
-     '8b0476983f2934c7f55792ca907eef68e9238326',
+     'cc56f94c19ccdbfa3af672741d57bbbba54112ad',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10844.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10853.tgz',
      'win32msvc.tgz',
-     '3c6b3bae10dbc2185fd5644a150e65e579c6acc6',
+     '9516e462c8e8dd6fe768925a3590615c804d68e3',
      'xapian-core/win32',
     ),
 )
